--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,109 +4,178 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white2"
     tools:context=".LoginActivity">
 
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="142dp"
-        android:layout_marginEnd="142dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+    <ImageView
+        android:id="@+id/appLogo"
+        android:layout_width="148dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginBottom="82dp"
+        android:contentDescription="@string/app_logo"
+        app:layout_constraintBottom_toTopOf="@+id/loginbox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.815" />
+        app:srcCompat="@drawable/applogo" />
+
+    <ImageView
+        android:id="@+id/mpPolicelogo"
+        android:layout_width="96dp"
+        android:layout_height="112dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="82dp"
+        android:contentDescription="@string/mp_police_logo"
+        app:layout_constraintBottom_toTopOf="@+id/loginbox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/appLogo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/mppolicelogo" />
+
+
+    <ImageView
+        android:id="@+id/resetActivity"
+        android:layout_width="114dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="203dp"
+        android:layout_marginEnd="95dp"
+        android:layout_marginBottom="9dp"
+        android:contentDescription="@string/entering_password"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userPasswd"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/forgotpasssword" />
 
     <EditText
         android:id="@+id/userEmail"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="222dp"
+        android:layout_height="40dp"
         android:layout_marginStart="84dp"
         android:layout_marginEnd="85dp"
         android:autofillHints=""
+        android:background="@drawable/email"
+        android:contentDescription="@string/entering_email1"
         android:ems="10"
         android:hint="@string/enter_email"
         android:inputType="textEmailAddress"
+        android:paddingStart="50dp"
+        android:paddingEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.129" />
+        app:layout_constraintVertical_bias="0.397" />
 
     <EditText
         android:id="@+id/userPasswd"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="222dp"
+        android:layout_height="40dp"
         android:layout_marginStart="85dp"
         android:layout_marginEnd="85dp"
+        android:autofillHints=""
+        android:background="@drawable/password"
         android:ems="10"
         android:hint="@string/enter_password"
-        android:importantForAutofill="no"
         android:inputType="textPassword"
+        android:paddingStart="50dp"
+        android:paddingEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.227" />
-
-    <TextView
-        android:id="@+id/signUpActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="163dp"
-        android:layout_marginEnd="163dp"
-        android:text="@string/not_registered_sign_up_here"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.43" />
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/or"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resetActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/userEmail"
+        app:layout_constraintVertical_bias="0.03" />
 
 
     <Button
         android:id="@+id/buttonLogIn"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="115dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/signin"
         android:text="@string/log_in"
+        android:textColor="@color/white"
+        android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintVertical_bias="0.59" />
 
-    <TextView
-        android:id="@+id/resetActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="114dp"
-        android:layout_marginEnd="114dp"
-        android:text="@string/forgot_password_click_here"
-        android:textSize="14sp"
+    <ImageView
+        android:id="@+id/or"
+        android:layout_width="221dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="95dp"
+        android:contentDescription="@string/ortext"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signUpActivity"
+        app:srcCompat="@drawable/or" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="222dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="142dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="96dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/or"
+        app:layout_constraintVertical_bias="0.47" />
+
+    <ImageView
+        android:id="@+id/loginbox"
+        android:layout_width="314dp"
+        android:layout_height="180dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginEnd="49dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.525" />
+        app:layout_constraintVertical_bias="0.452"
+        app:srcCompat="@drawable/boxlogin" />
+
+    <ImageView
+        android:id="@+id/signUpActivity"
+        android:layout_width="167dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="123dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="122dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
+        app:srcCompat="@drawable/signup" />
+
+    <ImageView
+        android:id="@+id/userLoginShow"
+        android:layout_width="125dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="143dp"
+        android:layout_marginBottom="13dp"
+        app:layout_constraintBottom_toTopOf="@+id/loginbox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appLogo"
+        app:srcCompat="@drawable/userloginwriting" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
