--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,119 +4,205 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white2"
     tools:context=".MainActivity">
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="142dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="148dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <ImageView
+        android:id="@+id/userLoginShow"
+        android:layout_width="144dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="143dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/box"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.521"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appLogo"
+        app:layout_constraintVertical_bias="0.055"
+        app:srcCompat="@drawable/usersignup" />
 
     <EditText
         android:id="@+id/userEmail"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_width="222dp"
+        android:layout_height="40dp"
         android:layout_marginStart="84dp"
         android:layout_marginEnd="85dp"
         android:autofillHints=""
+        android:background="@drawable/email"
+        android:contentDescription="@string/entering_email1"
         android:ems="10"
         android:hint="@string/enter_email"
         android:inputType="textEmailAddress"
+        android:paddingStart="50dp"
+        android:paddingEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.109" />
+        app:layout_constraintVertical_bias="0.397" />
 
     <EditText
         android:id="@+id/userPasswd"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_width="222dp"
+        android:layout_height="40dp"
         android:layout_marginStart="85dp"
         android:layout_marginEnd="85dp"
         android:autofillHints=""
+        android:background="@drawable/password"
         android:ems="10"
         android:hint="@string/enter_password"
         android:inputType="textPassword"
+        android:paddingStart="50dp"
+        android:paddingEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.218" />
+        app:layout_constraintTop_toBottomOf="@+id/userEmail"
+        app:layout_constraintVertical_bias="0.03" />
 
     <EditText
         android:id="@+id/reUserPasswd"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_width="222dp"
+        android:layout_height="40dp"
         android:layout_marginStart="85dp"
         android:layout_marginEnd="85dp"
         android:autofillHints=""
+        android:background="@drawable/password"
         android:ems="10"
         android:hint="@string/re_enter_password"
         android:inputType="textPassword"
+        android:paddingStart="50dp"
+        android:paddingEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.326" />
-
-    <TextView
-        android:id="@+id/signUpActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="163dp"
-        android:layout_marginEnd="163dp"
-        android:text="@string/already_have_an_account_login_here"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/userPasswd"
+        app:layout_constraintVertical_bias="0.035" />
 
     <Button
         android:id="@+id/buttonLogIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="115dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/signin"
         android:text="@string/sign_up"
+        android:textColor="@color/white"
+        android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.426" />
+        app:layout_constraintTop_toBottomOf="@+id/reUserPasswd"
+        app:layout_constraintVertical_bias="0.127" />
 
-    <TextView
+    <ImageView
         android:id="@+id/resetActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="114dp"
-        android:layout_marginEnd="114dp"
-        android:text="@string/forgot_password_click_here"
+        android:layout_width="114dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="203dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="95dp"
+        android:layout_marginBottom="9dp"
+        android:contentDescription="@string/entering_password"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reUserPasswd"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/forgotpasssword" />
+
+    <ImageView
+        android:id="@+id/signUpActivity"
+        android:layout_width="161dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="125dp"
+        android:contentDescription="@string/login_page"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
+        app:srcCompat="@drawable/existinguser" />
+
+    <ImageView
+        android:id="@+id/box"
+        android:layout_width="314dp"
+        android:layout_height="235dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="49dp"
+        android:contentDescription="@string/just_a_box"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.543" />
+        app:srcCompat="@drawable/box" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/or"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
+    <ImageView
+        android:id="@+id/appLogo"
+        android:layout_width="148dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginBottom="85dp"
+        android:contentDescription="@string/app_logo"
+        app:layout_constraintBottom_toTopOf="@+id/box"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.476"
+        app:srcCompat="@drawable/applogo" />
+
+    <ImageView
+        android:id="@+id/mpPolicelogo"
+        android:layout_width="96dp"
+        android:layout_height="112dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="85dp"
+        android:contentDescription="@string/mp_police_logo"
+        app:layout_constraintBottom_toTopOf="@+id/box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/appLogo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.476"
+        app:srcCompat="@drawable/mppolicelogo" />
+
+    <ImageView
+        android:id="@+id/or"
+        android:layout_width="221dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="95dp"
+        android:layout_marginBottom="161dp"
+        android:contentDescription="@string/ortext"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resetActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/signUpActivity"
+        app:srcCompat="@drawable/or" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="222dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="142dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="96dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/or"
+        app:layout_constraintVertical_bias="0.88" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
