--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -7,15 +7,129 @@
     tools:context=".MapFragment">
 
     <TextView
-        android:id="@+id/signUpActivity"
-        android:layout_width="319dp"
-        android:layout_height="323dp"
+        android:id="@+id/latStatus"
+        android:layout_width="153dp"
+        android:layout_height="30dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="72dp"
+        android:paddingLeft="15dp"
         android:text="@string/information_unavailable"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="25sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.362" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/latStatus2"
+        android:layout_width="153dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="54dp"
+        android:text="Unavailable "
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/latStatus"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/lonStatus"
+        android:layout_width="153dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="25dp"
+        android:paddingLeft="15dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/latStatus" />
+
+    <TextView
+        android:id="@+id/lonStatus2"
+        android:layout_width="153dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="54dp"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/latStatus"
+        app:layout_constraintTop_toBottomOf="@+id/latStatus2" />
+
+    <TextView
+        android:id="@+id/altStatus"
+        android:layout_width="153dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="25dp"
+        android:paddingLeft="15dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lonStatus" />
+
+    <TextView
+        android:id="@+id/altStatus2"
+        android:layout_width="153dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="54dp"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/latStatus"
+        app:layout_constraintTop_toBottomOf="@+id/lonStatus2" />
+
+    <TextView
+        android:id="@+id/accStatus"
+        android:layout_width="153dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="25dp"
+        android:paddingLeft="15dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/altStatus" />
+
+    <TextView
+        android:id="@+id/accStatus2"
+        android:layout_width="153dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="54dp"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/latStatus"
+        app:layout_constraintTop_toBottomOf="@+id/altStatus2" />
+
+    <TextView
+        android:id="@+id/addStatus"
+        android:layout_width="153dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="206dp"
+        android:paddingLeft="15dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/accStatus" />
+
+    <TextView
+        android:id="@+id/addStatus2"
+        android:layout_width="306dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginEnd="52dp"
+        android:paddingLeft="15dp"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addStatus"
+        app:layout_constraintVertical_bias="0.346" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
