--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#1D8EFF</color>
+    <color name="colorPrimaryDark">#0080FF</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="white">#FFFFFF</color>
+    <color name="white2">#F6F6F6</color>
+    <color name="grey">#888888</color>
+    <color name="greyInBox">#C1C1C1</color>
+    <color name="bleedred">#FD2626</color>
+    <color name="lessbleedred">#FF0000</color>
 </resources>
