--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,11 +147,12 @@
         android:id="@+id/appLogo"
         android:layout_width="148dp"
         android:layout_height="90dp"
-        android:layout_marginStart="68dp"
         android:layout_marginTop="94dp"
         android:layout_marginBottom="85dp"
         android:contentDescription="@string/app_logo"
         app:layout_constraintBottom_toTopOf="@+id/box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.476"
@@ -161,15 +162,13 @@
         android:id="@+id/mpPolicelogo"
         android:layout_width="96dp"
         android:layout_height="112dp"
-        android:layout_marginStart="18dp"
         android:layout_marginTop="72dp"
-        android:layout_marginEnd="90dp"
         android:layout_marginBottom="85dp"
         android:contentDescription="@string/mp_police_logo"
         app:layout_constraintBottom_toTopOf="@+id/box"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/appLogo"
+        app:layout_constraintHorizontal_bias="0.69"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.476"
         app:srcCompat="@drawable/mppolicelogo" />
@@ -192,16 +191,16 @@
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="222dp"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         android:layout_marginStart="142dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="142dp"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="73dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/or"
-        app:layout_constraintVertical_bias="0.88" />
+        app:layout_constraintTop_toBottomOf="@+id/or" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
