--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,7 +13,6 @@
         android:layout_marginTop="72dp"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
-        map:layout_constraintHorizontal_bias="1.0"
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintTop_toTopOf="parent"
         map:layout_constraintVertical_bias="0.0"
@@ -27,7 +26,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="308dp"
         android:layout_marginBottom="12dp"
-        android:background="@drawable/choosefile"
+        android:background="@drawable/choosefile_button"
         android:onClick="onButtonPressed"
         android:text="@string/back"
         android:textColor="#FFFFFF"
@@ -45,7 +44,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="43dp"
         android:layout_marginBottom="56dp"
-        android:background="@drawable/choosefile"
+        android:background="@drawable/choosefile_button"
         android:onClick="onButtonPressed"
         android:text="@string/display_n_nearby_hospitals"
         android:textColor="#FFFFFF"
@@ -61,7 +60,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="43dp"
         android:layout_marginBottom="56dp"
-        android:background="@drawable/choosefile"
+        android:background="@drawable/choosefile_button"
         android:onClick="onButtonPressed"
         android:text="@string/display_n_nearby_n_police_stations"
         android:textColor="#FFFFFF"
